--- a/Infinity Learn/Project_1/home.html
+++ b/Infinity Learn/Project_1/home.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to Infinity Learn</h1>
+    <h1>Infinity Learn</h1>
+    <h4>Study made easy</h4>
     <p id="user-name"></p>
     
   </header>
